[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/dialogue_box.gd" id="1_script"]

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="SafeArea" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialoguePanel" type="PanelContainer" parent="SafeArea"]
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SafeArea/DialoguePanel"]
layout_mode = 2

[node name="SpeakerName" type="Label" parent="SafeArea/DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="DialogueText" type="RichTextLabel" parent="SafeArea/DialoguePanel/VBoxContainer"]
layout_mode = 2
fit_content = true

[node name="NextIndicator" type="TextureRect" parent="SafeArea/DialoguePanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
